chore:资源管理-加载images图像

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
 .hello {
+  width: 400px;
   color: red;
   background: url("./happy.jpeg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }
